# SK-Commander

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
src/: App.vue  index.html  index.js  main.js  package-lock.json  package.json  preload.js  router.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/assets/: styles.css
src/assets/stores/: guild.js  index.js
src/assets/stores/modules/: activeGuild.js  user.js
src/assets/styles/: home.css  main.css  menu.css  preferences.css  settings.css
src/assets/utils/: ticket.js
src/components/: Greet.vue  HomePage.vue  InformationOverlay.vue  LoginPage.vue  NavBar.vue  NotificationPopup.vue  OperatorPage.vue  PreferencesPage.vue  SessionExpiredPage.vue  SettingsPage.vue  StatisticsPage.vue  SupportPage.vue  UnauthorizedPage.vue
src/components/Home/: EconomySettings.vue  GeneralSettings.vue  InformationSettings.vue  InteractionTile.vue  LevelSettings.vue  LogsTile.vue  OperatorsTile.vue  PurchasesTile.vue  ServersTile.vue  UserSettings.vue
src/components/Preferences/: AccountPreferences.vue  AccountSettings.vue  ApplicationPreferences.vue  ApplicationSettings.vue  LinkPreferences.vue  LinkSettings.vue  PlansPage.vue
src/components/Settings/: EconomySettings.vue  GeneralSettings.vue  InformationSettings.vue  LevelSettings.vue  UserSettings.vue
src/frontend/: default.css  index.html  script.js
src/frontend/css/: links.css  login.css
src/frontend/css/components/: nav.css
src/frontend/html/: links.html  login.html  statistics.html
src/frontend/js/: nav-index.js  nav-pages.js  script.js
src/www/: app.js  index.html
src/www/css/: login.css  statistics.css
src/www/html/: links.html  login.html  statistics.html
src/www/js/: nav-index.js  script.js
(+2 files in other folders)
