[package]
name = "bot_commander"
version = "1.0.0"
description = "Bot Configuration Interface"
authors = ["Stefan Kruik"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "shell-open", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.34", features = ["serde"] }
serde_json = "1.0"
tokio = { version = "1.36.0", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "mysql", "chrono" ] }
dotenv = "0.15.0"
once_cell = "1.19.0"
reqwest = "0.11.24"
jsonwebtoken = "9.2.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
