[package]
name = "bot_commander"
version = "1.0.0"
description = "Bot Configuration Interface"
authors = ["Stefan Kruik"]
license = "Apache-2.0"
repository = "https://github.com/SVKruik-Organization/Bot-Commander"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "shell-open"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.34", features = ["serde"] }
serde_json = "1.0"
tokio = { version = "1.36.0", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "mysql", "chrono" ] }
dotenv = "0.15.0"
once_cell = "1.19.0"
reqwest = "0.11.24"
jsonwebtoken = "9.2.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
